[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "onnxruntime>=1.22.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "scikit-image>=0.25.2",
    "scipy>=1.16.1",
    "streamlit-plotly-events>=0.0.6",
    "streamlit>=1.49.1",
    "streamlit-image-coordinates>=0.4.0",
    "opencv-python-headless>=4.11.0.86",
    "opencv-python>=4.11.0.86",
]
